tests/paczka2/big_fuzzy/34014868.err
Error in line 1: S7YxHITHWe A280 91,f
Error in line 4: S7YxHITHWe A280 742,8
Error in line 8: S7YxHITHWe A382 4,8
Error in line 9: S7YxHITHWe A387 63,5
Error in line 16: UYQ61 A387 31,0
Error in line 12: S7YxHITHWe A280 89,9
Error in line 18: S7YxHITHWe A382 9,3
Error in line 31: UYQ61 A387 20,4
Error in line 46: A387 A382 74,6
Error in line 58: HMgvnVZ82R A382 70,8
Error in line 64: S7YxHITHWe A387 53,7
Error in line 51: 9Ey S755 255,1
Error in line 83: S7YxHITHWe A382 -1,9
Error in line 81: S7YxHITHWe A382 2,6
Error in line 92: HMgvnVZ82R A382 54,6
Error in line 93: S7YxHITHWe A382 29,5
Error in line 95: S7YxHITHWe S755 50,4
Error in line 94: HMgvnVZ82R S755 79,9
Error in line 80: Mal1WW S755 170,8
Error in line 108: UYQ61 A387 57,1
Error in line 113: 9Ey A387 52,42
Error in line 112: UYQ61 S755 26,2
Error in line 130: HMgvnVZ82R A387 33,8
Error in line 134: HMgvnVZ82R S755 29,7
Error in line 131: 9Ey A280 28,7
Error in line 136: HMgvnVZ82R A387 31,6
Error in line 142: 9Ey A387 273,8
Error in line 144: UYQ61 S755 50,4
Error in line 159: UYQ61 A280 42,0
Error in line 153: IRdF3tQSki A280 117,2
Error in line 164: IRdF3tQSki S755 19,1
Error in line 167: IRdF3tQSki A387 18,0
Error in line 181: HMgvnVZ82R A387 17,5
Error in line 187: HMgvnVZ82R A382 34,0
Error in line 198: IRdF3tQSki A382 52,3
Error in line 216: S7YxHITHWe A387 59,6
Error in line 208: Mal1WW S755 6,0
Error in line 229: Mal1WW A387 71,2
Error in line 232: UYQ61 A280 27,7
Error in line 242: 9Ey A382 79,7
Error in line 236: A387 A387 23,8
